[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catrepo"
version = "1.0.0"
description = "Flatten a repository into one text dump with tree view"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
catrepo = "catrepo.cli:main"

[project.urls]
Homepage = "https://github.com/fullstack/catrepo"

[tool.setuptools.packages.find]
where = ["src"]
